# github-workflows-autobuild-windows.yml

./: README.md
.github/workflows/: README.md  autobuild-windows.yml  nia_memory.json  pyproject.toml  talk-to-nia.ps1
.github/workflows/CNiaNia.psd1/Nia-Live/: render.yaml  requirements.txt
.github/workflows/Power Automate Desktop For Windows/: 378383fb-d48d-4064-8ad4-ebe8f2121b8f.cnt
.github/workflows/nia-gitops/nia-gitops/: README.md
.github/workflows/niabrain/birddog/: analyzer.py
niabrain/autobuilder/: planner.py
