[project]
name = "nia_deployment_automation"
version = "0.1.0"
description = "nia_deployment_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
nia_deployment_automation = "nia_deployment_automation.main:run"
run_crew = "nia_deployment_automation.main:run"
train = "nia_deployment_automation.main:train"
replay = "nia_deployment_automation.main:replay"
test = "nia_deployment_automation.main:test"
run_with_trigger = "nia_deployment_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
